--- a/part4/.env
+++ b/part4/.env
@@ -1,3 +1,3 @@
-MONGODB_URI='mongodb+srv://fullstack:Ramji@369@cluster0.nwubd.mongodb.net/test?retryWrites=true&w=majority'
+MONGODB_URI='mongodb+srv://Sowmya:Sowmya@2607@cluster0.ecmsc.mongodb.net/myFirstDatabase?retryWrites=true&w=majority'
 PORT=3001
-TEST_MONGODB_URI=mongodb+srv://fullstack:Ramji@369@cluster0-ostce.mongodb.net/test-test?retryWrites=true
+TEST_MONGODB_URI=mongodb+srv://Sowmya:Sowmya@2607@cluster0.ecmsc.mongodb.net/test?retryWrites=true&w=majority'
